--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -36,7 +36,7 @@
     "postcss": "8.4.13",
     "prop-types": "15.8.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-dropzone": "14.2.0",
     "react-helmet": "6.1.0",
     "react-use": "17.3.2",
