--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -5,7 +5,44 @@
   "version": "0.1.0",
   "author": "Skynet Labs.",
   "dependencies": {
-    "react-dom": "17.0.2"
+    "@fontsource/sora": "4.5.8",
+    "@fontsource/source-sans-pro": "4.5.9",
+    "@svgr/webpack": "6.2.1",
+    "bytes": "3.1.2",
+    "classnames": "2.3.1",
+    "copy-text-to-clipboard": "3.0.1",
+    "crypto-browserify": "3.12.0",
+    "framer-motion": "6.3.3",
+    "gatsby": "4.13.1",
+    "gatsby-background-image": "1.6.0",
+    "gatsby-plugin-image": "2.13.0",
+    "gatsby-plugin-manifest": "4.13.0",
+    "gatsby-plugin-postcss": "5.13.0",
+    "gatsby-plugin-react-helmet": "5.13.0",
+    "gatsby-plugin-robots-txt": "1.7.1",
+    "gatsby-plugin-sharp": "4.13.0",
+    "gatsby-plugin-sitemap": "5.13.0",
+    "gatsby-plugin-svgr": "3.0.0-beta.0",
+    "gatsby-source-filesystem": "4.13.0",
+    "gatsby-transformer-sharp": "4.13.0",
+    "gatsby-transformer-yaml": "4.13.0",
+    "gbimage-bridge": "0.2.1",
+    "http-status-codes": "2.2.0",
+    "ms": "2.1.3",
+    "nanoid": "3.3.4",
+    "normalize.css": "8.0.1",
+    "path-browserify": "1.0.1",
+    "polished": "4.2.2",
+    "postcss": "8.4.13",
+    "prop-types": "15.8.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-dropzone": "14.2.0",
+    "react-helmet": "6.1.0",
+    "react-use": "17.3.2",
+    "skynet-js": "4.1.0",
+    "stream-browserify": "3.0.0",
+    "swr": "1.3.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "0.5.2",
